{{$NEXT}}

3.033     2024-09-06 10:31:32+02:00 Europe/Berlin

 - Migrated program 'drc3.pl' from Perl to Go.
   It is named 'drc' now.
   'drc3.pl' is still available as symbolic link to 'drc'.
   Programs 'drc-asa', 'drc-ios', 'drc-linux', 'drc-nsx', 'drc-pan-os'
   have been removed.
 - When running 'diamonds compare' or 'drc3.pl -C' and device has changed,
   then changes are written to file '*.cmp'.
 - Migrated program 'get-netspoc-approve-conf' from Perl to Go.
 - This warning from ASA is ignored now: 'crypto map entry will be incomplete'.

3.032     2024-08-14 11:55:20+02:00 Europe/Berlin

 - Fixed sorting of rules for NSX where rule references group
 - Fixed compare of rules for NSX where rule references external
   group, that is not known by Netspoc.
 - Fixed check of raw file for NSX:
   - Name of group must start with "Netspoc",
     but must not start with "Netspoc-g<NUM>".
   - Name of service must start with "Netspoc-raw".
 - Migrated approve for Linux from Perl to Go.

3.031     2024-07-25 11:31:12+02:00 Europe/Berlin

 - Fixed wrong seq num "0" in added "tunnel-group-map" from Netspoc.

3.030     2024-07-23 13:12:24+02:00 Europe/Berlin

 - Fixed unwanted "exit" from conf mode.
 - Fixed: Logfiles *.login, *.change are saved now,
   if policy is approved multiple times.
 - More warnings are ignored:
   - For "crypto map", "no crypto map":
     "The crypto map entry is incomplete!"
   - For "no access-list":
     "Same object-group is used more than once in one config line"

3.029     2024-06-12 11:17:04+02:00 Europe/Berlin

 - Fixed seq num for inserted commands of crypto map.
 - Changed default group for "crypto [dynamic-]map set pfs"
   from "group2" to "group14".
 - Use git instead of cvs.

3.028     2024-05-08 11:03:25+02:00 Europe/Berlin

 - Fixed: Allow new option 'netspoc_git' in config file in preparation
   of next release.

3.027     2024-04-22 17:39:54+02:00 Europe/Berlin

 - Command 'newpolicy' shows content of compile.log only on error.